# AudioNeteq-Cmake

./: CMakeLists.txt  audio-neteq.cc  audio-neteq.cpp  audio-neteq.h  test-neteq.c  test.pcm  test_neteq.c
api/audio_codecs/: builtin_audio_decoder_factory.cc
api/neteq/: neteq.h
modules/audio_coding/neteq/: accelerate.cc  accelerate.h  neteq_impl.cc  neteq_impl.h
rtc_base/: checks.h
